CUDA Toolkit version mismatch #40119

Closed
opened 2014-05-09 22:09:16 +02:00 by Lukas Stockner · 7 comments
Member

OK, I found something strange again, this time it's a mismatch of the required CUDA toolkit versions. In the CMakeLists.txt of intern/cycles/kernel, the supported CUDA toolkit is 6.0, but in device_cuda.cpp, around line 300, the supported toolkit is still 5.0. Was this overlooked when migrating to 6.0?

OK, I found something strange again, this time it's a mismatch of the required CUDA toolkit versions. In the CMakeLists.txt of intern/cycles/kernel, the supported CUDA toolkit is 6.0, but in device_cuda.cpp, around line 300, the supported toolkit is still 5.0. Was this overlooked when migrating to 6.0?
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Author
Member

Sorry, forgot to tag Cycles.

Sorry, forgot to tag Cycles.

This issue was referenced by blender/blender-addons-contrib@fd26a32aa5

This issue was referenced by blender/blender-addons-contrib@fd26a32aa5336b6c5fd3e8a9fc5fc618b2590bb1

This issue was referenced by fd26a32aa5

This issue was referenced by fd26a32aa5336b6c5fd3e8a9fc5fc618b2590bb1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fd26a32aa5.

Closed by commit fd26a32aa5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40119
No description provided.