Fix T40119, CUDA Toolkit version mismatch